--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ section#pane_four {
 	width: 50%;
 	text-align: center;
 	min-height: 100px;
-	background-color: #F89406;
+	background-color: #f9690e;
 	float: left;
 }
 
@@ -55,7 +55,7 @@ section#pane_five {
 	width: 50%;
 	text-align: center;
 	min-height: 100px;
-	background-color: #F4B350;
+	background-color: #19b5fe;
 	float: right;
 }
 
